--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,7 +1,7 @@
 /* CSS for slider image */
 
 #slider {
-    background: url('/assets/img/slider/chicago.jpg') top center / cover no-repeat;
+    background: url('./assets/img/slider/chicago.jpg') top center / cover no-repeat;
     margin-top: 46px;
     padding-top: 50%;
     position: relative;
